# axum-mariadb-test

./: .gitignore  Cargo.toml  README.md
diesel/: connection.rs  lib.rs  schema.rs
public/: index.html  login.html  register.html
src/: handlers.rs  main.rs  models.rs  state.rs
